<resources>
    <string name="app_name">IrishExchange</string>
    <string name="registration_success_message">User registration successful</string>
    <string name="select_photo_button">Select photo</string>
    <string name="username_label">Username</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="register_button">Create an account</string>
    <string name="registration_title">Register</string>
    <string name="login_title">Login</string>
    <string name="forgot_password_label">Forgot password?</string>
    <string name="already_have_account_label">Have an account? Login here</string>
    <string name="registration_photo_selected_success_message">Photo was selected</string>
    <string name="login_success_message">User login successful</string>
    <string name="missing_fields_message">Please fill out every field</string>
    <string name="incorrect_missing_fields_message">Please fill missing or incorrect fields</string>
    <string name="fetch_chat_log_failure_message">Unable to retrieve chat log messages</string>
    <string name="chat_log_message_sent_failure">Unable to send message</string>
    <string name="save_profile_success_message">Your profile is saved successfully</string>
    <string name="save_profile_failure_message">Failed to save your profile, please check fields are valid</string>
    <string name="network_unavailable_message">Network unavailable. Check network</string>
    <string name="profile_irish_level">Irish Level</string>
    <string name="profile_irish_dialect">Irish Dialect</string>
    <string name="profile_city_town">City / Town</string>
    <string name="profile_age">Age</string>
    <string name="profile_gender">Gender</string>
    <string name="profile_about_me">A little about me</string>
    <string name="fetch_user_profile_error_message">Unable to fetch user profile details</string>
    <string name="title_messages">Messages</string>
    <string name="title_search">Search</string>
    <string name="title_profile">My Profile</string>
    <string name="upload_image_success_message">Successfully changed your profile picture</string>
    <string name="upload_image_failure_message">Failed to change your profile picture</string>
    <string name="network_unavailable_upload_image_message">Unable to upload image while not connected to network</string>
    <string name="nav_menu_log_out">Log out</string>
    <string name="user_log_out_dialog_no">no</string>
    <string name="user_log_out_dialog_yes">yes</string>
    <string name="user_log_out_dialog_message">Are you sure you want to log out?</string>
    <string name="user_log_out_dialog_title">Log Out</string>
    <string name="nav_menu_edit_profile">Edit profile</string>
    <string name="no_new_messages">You have no new messages</string>
    <string name="allow_storage_permissions">Please allow Storage permissions in order to choose an image from the gallery</string>
    <string name="network_unavailable_message_notification">Please reconnect your network in order to receive latest messages</string>
    <string name="reset_password_title">Reset password</string>
    <string name="reset_button_reset_password">Reset password</string>
    <string name="request_new_password_text">Please enter your email to request a new password</string>
    <string name="password_request_success_message">Password request has been sent. Please check your email.</string>
    <string name="nav_menu_block_user">Block User</string>
    <string name="search_users_online_status_image_desc">Online status</string>
    <string name="nav_menu_report_user">Report User</string>
    <string name="nav_menu_view_profile">View Profile</string>
    <string name="report_user_success_message">Thank you, this user has now been reported for abusive or harmful content</string>
    <string name="already_reported_user_message">You have already reported this user</string>
    <string name="report_user_failure_message">Failed to report user, please try again later</string>
    <string name="report_user_dialog_message">Are you sure you want to report this user?</string>
    <string name="report_user_dialog_title">Report User</string>
    <string name="block_user_dialog_message">Are you sure you want to block this user? Please note that you will not be able to see or message each other again</string>
    <string name="block_user_dialog_title">Block User</string>
    <string name="report_user_dialog_yes">yes</string>
    <string name="report_user_dialog_no">no</string>
    <string name="already_blocked_user_message">You have already blocked this user</string>
    <string name="block_user_success_message">You have now blocked this user. You will no longer be able to see or communiate with them in future</string>
    <string name="block_user_failure_message">Unable to block user, please try again later</string>
</resources>
