<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_messages">

    <fragment
        android:id="@+id/navigation_messages"
        android:name="com.davidogrady.irishexchange.latestmessages.LatestMessagesFragment"
        android:label="@string/title_messages"
        tools:layout="@layout/fragment_latest_messages" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.davidogrady.irishexchange.newmessage.NewMessageFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_new_message" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.davidogrady.irishexchange.myprofile.MyProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/irish_helper_grid_item" />

</navigation>