<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/select_photo_button"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_select_photo_login"
        android:text="@string/select_photo_button"
        android:shadowColor="@android:color/black"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/username_edittext_register"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_edittext_register_login"
        android:textColorHint="@android:color/white"
        android:drawableStart="@drawable/ic_person_white_24dp"
        android:drawableLeft="@drawable/ic_person_white_24dp"
        android:maxLength="30"
        android:maxLines="1"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/username_label"
        android:shadowColor="@android:color/black"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingLeft="16dp"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_photo_button" />

    <EditText
        android:id="@+id/email_edittext_register"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/rounded_edittext_register_login"
        android:textColorHint="@android:color/white"
        android:drawableStart="@drawable/ic_email_white_24dp"
        android:drawableLeft="@drawable/ic_email_white_24dp"
        android:maxLength="30"
        android:maxLines="1"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/email_label"
        android:shadowColor="@android:color/black"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingLeft="16dp"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/username_edittext_register"
        app:layout_constraintStart_toStartOf="@+id/username_edittext_register"
        app:layout_constraintTop_toBottomOf="@+id/username_edittext_register" />

    <EditText
        android:id="@+id/password_edittext_register"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:background="@drawable/rounded_edittext_register_login"
        android:textColorHint="@android:color/white"
        android:drawableStart="@drawable/ic_lock_white_24dp"
        android:drawableLeft="@drawable/ic_lock_white_24dp"
        android:maxLength="30"
        android:maxLines="1"
        android:drawablePadding="5dp"
        android:hint="@string/password_label"
        android:shadowColor="@android:color/black"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingLeft="16dp"
        app:layout_constraintEnd_toEndOf="@+id/email_edittext_register"
        app:layout_constraintStart_toStartOf="@+id/email_edittext_register"
        app:layout_constraintTop_toBottomOf="@+id/email_edittext_register" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register_button_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/rounded_button"
        android:shadowColor="@android:color/black"
        android:text="@string/register_button"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/password_edittext_register"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/password_edittext_register"
        app:layout_constraintTop_toBottomOf="@+id/password_edittext_register" />


    <TextView
        android:id="@+id/already_have_account_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/already_have_account_label"
        android:textColor="@android:color/white"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/progressBarHolderRegister"
        app:layout_constraintEnd_toEndOf="@+id/register_button_register"
        app:layout_constraintStart_toStartOf="@+id/register_button_register">
    </TextView>

    <FrameLayout
        android:id="@+id/progressBarHolderRegister"
        android:animateLayoutChanges="true"
        android:visibility="invisible"
        android:background="#000000"
        android:alpha="0.4"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:layout_gravity="center"/>

    </FrameLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration_title"
        android:textColor="@android:color/white"
        android:shadowColor="@android:color/black"
        android:textSize="30sp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/selectphoto_imageview_register"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:civ_border_width="4dp"
        app:srcCompat="@drawable/ic_add_circle_outline_black_24dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/select_photo_button"
        app:layout_constraintEnd_toEndOf="@+id/select_photo_button"
        app:layout_constraintStart_toStartOf="@+id/select_photo_button"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


</androidx.constraintlayout.widget.ConstraintLayout>