<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/title_textview_reset_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password_title"
        android:textColor="@android:color/white"
        android:shadowColor="@android:color/black"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subtitle_textview_reset_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:text="@string/request_new_password_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_textview_reset_password"/>

    <EditText
        android:id="@+id/email_edittext_reset_password"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:paddingLeft="16dp"
        android:ems="10"
        android:hint="@string/email_label"
        android:background="@drawable/rounded_edittext_register_login"
        android:textColorHint="@android:color/white"
        android:drawableStart="@drawable/ic_email_white_24dp"
        android:drawableLeft="@drawable/ic_email_white_24dp"
        android:drawablePadding="5dp"
        android:shadowColor="@android:color/black"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtitle_textview_reset_password" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/reset_button_reset_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounded_button"
        android:text="@string/reset_button_reset_password"
        android:textColor="@android:color/black"
        android:shadowColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/email_edittext_reset_password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/email_edittext_reset_password"
        app:layout_constraintTop_toBottomOf="@+id/email_edittext_reset_password" />

    <FrameLayout
        android:id="@+id/progressBarHolderLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.4"
        android:animateLayoutChanges="true"
        android:background="#000000"
        android:visibility="invisible"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#000000"
            android:alpha="0.4"
            android:layout_gravity="center"
            android:indeterminate="true" />

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>